fixed how package details look on small width screens

--- a/src/styles/PackageDetails.css
+++ b/src/styles/PackageDetails.css
@@ -12,6 +12,26 @@
   margin-top: 16px;
 }
 
+@media screen and (max-width: 640px) {
+  .PackageDetails-container {
+    grid-template:
+      "a b"
+      "c c"
+      "d d"
+      "e e";
+  }
+
+  .PackageDetails-dependencies {
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+
+  .PackageDetails-dependants {
+    grid-row-start: 4;
+    grid-row-end: 5;
+  }
+}
+
 .PackageDetails-root > * {
   padding: 4px;
   margin-bottom: 16px;
